Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10992

umount sometimes will get stuck

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.12.0, Lustre 2.10.5
    • Lustre 2.10.3
    • None
    • sles12sp3
    • 2
    • 9223372036854775807

      This looks like a duplicate of LU-7994. But have the patch from that LU applied.

      umount filesystem will get stuck.

      r511i7n14 /proc/97511 # cat stack 
      [<ffffffffa10c5df6>] ll_kill_super+0x86/0x170 [lustre]
      [<ffffffffa0c87b5a>] lustre_kill_super+0x3a/0x50 [obdclass]
      [<ffffffff8121f4d8>] deactivate_locked_super+0x48/0x80
      [<ffffffff8121f556>] deactivate_super+0x46/0x60
      [<ffffffff8123b89f>] cleanup_mnt+0x3f/0x80
      [<ffffffff8123b932>] __cleanup_mnt+0x12/0x20
      [<ffffffff810a20b9>] task_work_run+0x89/0xb0
      [<ffffffff8107f3de>] exit_to_usermode_loop+0x95/0xca
      [<ffffffff81003b6d>] syscall_return_slowpath+0x8d/0xa0
      [<ffffffff8164b167>] int_ret_from_sys_call+0x25/0x9f
      [<ffffffffffffffff>] 0xffffffffffffffff
      

      will upload client debug dump.
      There is one interesting error message on the console.

      LustreError: 94086:0:(statahead.c:1591:start_statahead_thread()) can't start ll_sa thread, rc: -4
      

            yong.fan nasf (Inactive)
            mhanafi Mahmoud Hanafi
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: